--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Heebo:100,200,300,regular,500,600,700,800,900&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Merienda:300,regular,500,600,700,800,900&display=swap);
 * {
   padding: 0;
   margin: 0;
@@ -96,13 +98,13 @@ h6 {
 .header {
   background: #fff;
   box-shadow: 0px 25px 40px 0px rgba(26, 127, 114, 0.1);
-}
-.header__active {
-  position: absolute;
-  max-width: 116px;
-  height: 10px;
-  top: 130px;
-  left: 730px;
+  /* &__active {
+    position: absolute;
+    max-width: 116px;
+    height: 10px;
+    top: 130px;
+    left: 730px;
+  }*/
 }
 .header__navigation {
   padding: 20px 150px 3px 146px;
@@ -128,13 +130,36 @@ h6 {
   line-height: normal;
 }
 .header__menu-item:first-child {
-  color: #1a7f72;
   /* Header font Medium */
   font-family: Heebo;
   font-size: 32px;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+}
+.header__link {
+  color: #000;
+  position: relative;
+}
+.header__link:after {
+  content: "";
+  position: absolute;
+  border-radius: 50px 50px 0px 0px;
+  background-color: #1a7f72;
+  height: 10px;
+  width: 0;
+  left: 0;
+  bottom: -38px;
+  transition: 0.4s;
+}
+.header__link:hover {
+  color: #1a7f72;
+  opacity: 1;
+}
+.header__link:hover::after {
+  color: #1a7f72;
+  width: 150%;
+  opacity: 1;
 }
 
 .hero__block {
@@ -171,19 +196,12 @@ h6 {
 .hero__button {
   color: #fff;
   text-align: center;
-  /* Button_text (get start) */
-  font-family: Heebo;
-  font-size: 30px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 130%; /* 39px */
   width: 300px;
   height: 75px;
-  flex-shrink: 0;
   /* Button_text (get start) */
   border-radius: 50px;
   background-color: #159685;
-  box-shadow: 0px 20px 40px 0px rgba(21, 113, 101, 0.2);
+  box-shadow: 0px 20px 40px #000;
   text-align: center;
   font-family: Heebo;
   font-size: 30px;
@@ -257,6 +275,7 @@ h6 {
   font-weight: 400;
   line-height: 130%; /* 31.2px */
   background: #159685;
+  box-shadow: 5px 15px 30px #0b786c;
   border-radius: 50px;
   width: 210px;
   height: 60px;
@@ -404,9 +423,8 @@ h6 {
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 150px;
   padding: 28px 40px 30px 20px;
-  width: 610px;
+  width: 650px;
   height: 150px;
   border-radius: 15px;
   border: 2px solid #1e9787;
@@ -433,11 +451,29 @@ h6 {
   font-weight: 400;
   line-height: 130%; /* 31.2px */
 }
-.breach__btn-play {
+.breach__btn-play-top {
   background-color: #159685;
+  box-shadow: 0px 10px 30px #0b786c;
   border-radius: 50px;
   width: 80px;
   height: 80px;
+  margin-left: 160px;
+}
+.breach__btn-play-midl {
+  background-color: #159685;
+  box-shadow: 0px 10px 30px #0b786c;
+  border-radius: 50px;
+  width: 80px;
+  height: 80px;
+  margin-left: 230px;
+}
+.breach__btn-play-bottom {
+  background-color: #159685;
+  box-shadow: 0px 10px 30px #0b786c;
+  border-radius: 50px;
+  width: 80px;
+  height: 80px;
+  margin-left: 252px;
 }
 
 .icon__play {
@@ -618,6 +654,7 @@ h6 {
   font-weight: 400;
   line-height: 130%; /* 31.2px */
   background: #159685;
+  box-shadow: 5px 15px 30px #0b786c;
   border: 0px;
   border-radius: 50px;
   width: 210px;
@@ -680,6 +717,19 @@ h6 {
 .footer__menu-icon {
   width: 55px;
   height: 55px;
+  color: #000000;
+  outline-offset: 3px;
+  outline: 1px solid transparent;
+}
+.footer__menu-icon:hover {
+  color: #099d84;
+  color: #fff;
+  box-shadow: 10px 20px 20px;
+  border: 0;
+}
+.footer__menu-icon:active {
+  color: #099d84;
+  box-shadow: 10px 20px 20px;
 }
 
 /*# sourceMappingURL=styles.css.map */
